--- a/products-microservice/src/main/resources/application.properties
+++ b/products-microservice/src/main/resources/application.properties
@@ -3,8 +3,19 @@ spring.application.name=products-microservice
 #server.port=8080
 
 spring.kafka.bootstrap-servers=172.30.84.55:9092
-
 #spring.kafka.producer.bootstrap-servers=172.30.84.55:9092
+
+
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+#spring.kafka.producer.acks=all
+#spring.kafka.producer.retries=10
+#spring.kafka.producer.properties.retry.backoff.ms=1000
+
+#spring.kafka.producer.properties.delivery.timeout.ms=120000
+#spring.kafka.producer.properties.linger.ms=0
+#spring.kafka.producer.properties.request.timeout.ms=30000
+
+
 
