--- a/email-notification-microservice/src/main/resources/application.properties
+++ b/email-notification-microservice/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=email-notification-microservice
+
+
+server.port=8081
+
+spring.kafka.bootstrap-servers=172.30.84.55:9092
+
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.group-id=product-created-events
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
