--- a/products-microservice/pom.xml
+++ b/products-microservice/pom.xml
@@ -50,6 +50,12 @@
             <version>2.19.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.vilelo.ws</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-kafka-test</artifactId>
