--- a/products-microservice/src/main/resources/application.properties
+++ b/products-microservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=products-microservice
 
-#server.port=8080
+server.port=8080
 
 spring.kafka.bootstrap-servers=172.30.84.55:9092
 #spring.kafka.producer.bootstrap-servers=172.30.84.55:9092
