--- a/email-notification-microservice/pom.xml
+++ b/email-notification-microservice/pom.xml
@@ -46,6 +46,12 @@
 		</dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.19.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.vilelo.ws</groupId>
             <artifactId>core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
