--- a/email-notification-microservice/src/main/resources/application.properties
+++ b/email-notification-microservice/src/main/resources/application.properties
@@ -5,7 +5,8 @@ server.port=8081
 
 spring.kafka.bootstrap-servers=172.30.84.55:9092
 
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
 spring.kafka.consumer.group-id=product-created-events
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.vilelo.ws.core
