feature/section14-kafka-idempotent-consumer completed section with test almost successful at 100% because no h2 db console to verify

--- a/email-notification-microservice/src/main/resources/application.properties
+++ b/email-notification-microservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=email-notification-microservice
 
 
-server.port=0
+server.port=8082
 
 spring.kafka.bootstrap-servers=172.30.84.55:9092
 
@@ -10,3 +10,12 @@ spring.kafka.bootstrap-servers=172.30.84.55:9092
 
 spring.kafka.consumer.group-id=product-created-events
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.vilelo.ws.core
+
+
+spring.datasource.username=julio
+spring.datasource.password=julio
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
