--- a/email-notification-microservice/src/main/resources/application.properties
+++ b/email-notification-microservice/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.kafka.bootstrap-servers=172.30.84.55:9092
 spring.kafka.consumer.group-id=product-created-events
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.vilelo.ws.core
 
+spring.kafka.consumer.auto-offset-reset=earliest
+
 
 spring.datasource.username=julio
 spring.datasource.password=julio
